add links to socials

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,16 +3,16 @@ import { Icon } from "astro-icon";
 ---
 
 <div class="socials-wrapper">
-    <a href="" aria-label="GitHub">
+    <a href="https://github.com/coding-seahorse" aria-label="GitHub">
         <Icon name="mdi:github" />
     </a>
-    <a href="" aria-label="Linkedin">
+    <a href="https://uk.linkedin.com/" aria-label="Linkedin">
         <Icon name="ri:linkedin-fill" />
     </a>
-    <a href="" aria-label="Instagram">
+    <a href="https://www.instagram.com/" aria-label="Instagram">
         <Icon name="mdi:instagram" />
     </a>
-    <a href="" aria-label="Twitter">
+    <a href="https://twitter.com/?lang=en" aria-label="Twitter">
         <Icon name="mdi:twitter" />
     </a>
 </div>
