--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,6 +79,9 @@ const { title } = Astro.props;
 	}
 
 	main {
-		max-width: 1000px;
+		width: 1000px;
+		@media (max-width: 1000px) {
+            max-width: 1000px;
+        }
 	}
 </style>
