add media query to main layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,8 +80,9 @@ const { title } = Astro.props;
 
 	main {
 		width: 1000px;
-		@media (max-width: 1000px) {
+		@media (max-width: 1200px) {
             max-width: 1000px;
+			width: initial;
         }
 	}
 </style>
