--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ import countdown from "../images/website-countdown.png";
 
 		<div class="">
 			<p>
-				I'm a Front-End Web Developer based in Hertfordshire, England, I
-				enjoy creating clean, well-structured and accessible websites. I
+				I'm a Front-End Web Developer based in Hertfordshire, England. I
+				enjoy creating clean, well-structured, and accessible websites. I
 				am proficient in the following frontend technologies:
 			</p>
 		</div>
