--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import countdown from "../images/website-countdown.png";
 	<section class="contact">
 		<p>
 			Available for select freelance projects.
-			<a href="mailto:">edward@eddbyrne.com</a>
+			<a href="mailto:edward@eddbyrne.com">edward@eddbyrne.com</a>
 		</p>
 	</section>
 </Layout>
