modify skills styling

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -40,15 +40,24 @@
     a {
         padding-bottom: 0.5rem;
         color: var(--color-accent);
-        border-bottom: 1px solid var(--color-accent);
         text-align: center;
         text-decoration: none;
         display: inline-block;
         font-size: var(--medium);
         font-weight: 600;
         margin: 4px 2px;
-        &:hover {
-            color: white;
-        }
+    }
+
+    a::after {
+        content: "";
+        background: var(--color-accent);
+        display: block;
+        height: 1px;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    a:hover::after {
+        transform: scaleX(0);
+        transform-origin: 50% 0;
     }
 </style>
