modify text in contact section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,7 @@ import countdown from "../images/website-countdown.png";
 	</section>
 	<section class="contact">
 		<p>
-			Available for select freelance projects.
+			Available for full-time hire or freelance.
 			<a href="mailto:edward@eddbyrne.com">edward@eddbyrne.com</a>
 		</p>
 	</section>
